--- a/src/contract/test-harness/Cargo.toml
+++ b/src/contract/test-harness/Cargo.toml
@@ -13,6 +13,7 @@ darkfi-dao-contract = {path = "../dao", features = ["client", "no-entrypoint"]}
 darkfi-money-contract = {path = "../money", features = ["client", "no-entrypoint"]}
 darkfi-consensus-contract = {path = "../consensus", features = ["client", "no-entrypoint"]}
 darkfi-deployooor-contract = {path = "../deployooor", features = ["client", "no-entrypoint"]}
+darkfi-timelock-contract = {path = "../timelock", features = ["client", "no-entrypoint"]}
 
 blake3 = "1.4.1"
 bs58 = "0.5.0"
