--- a/example/dchat/Cargo.toml
+++ b/example/dchat/Cargo.toml
@@ -10,16 +10,24 @@ edition = "2021"
 
 # ANCHOR: darkfi
 [dependencies]
-darkfi = {path = "../../", features = ["net", "rpc"]}
+darkfi = {path = "../../", features = ["net", "toml", "system", "async-daemonize", "rpc"]}
 darkfi-serial = {path = "../../src/serial"}
 # ANCHOR_END: darkfi
 
 # ANCHOR: dependencies
 async-trait = "0.1.74"
-easy-parallel = "3.3.1"
-smol = "1.3.0"
 log = "0.4.20"
-simplelog = "0.12.1"
 url = "2.4.1"
-toml = "0.8.8"
+
+# Daemon
+easy-parallel = "3.3.1"
+signal-hook-async-std = "0.2.2"
+signal-hook = "0.3.17"
+simplelog = "0.12.1"
+smol = "1.3.0"
+
+# Arg parsing
+serde = {version = "1.0.192", features = ["derive"]}
+structopt = "0.3.26"
+structopt-toml = "0.5.1"
 # ANCHOR_END: dependencies
