--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ members = [
 libc = "0.2.152"
 log = "0.4.20"
 thiserror = "1.0.56"
+async-std = "1.12.0"
 
 # async-runtime
 async-recursion = {version = "1.0.5", optional = true}
